syntax="proto3";

package newsletterpb.v1;

option go_package="github.com/sankethkini/NewsLetter-Backend/proto/newsletterpb/v1";
option java_multiple_files = true;
option java_outer_classname = "ApiProto";

option java_package = "com.newsletterpb.v1";

service NewsLetterService{
    rpc CreateNewsLetter(CreateNewsLetterRequest) returns (NewsLetter){}
    rpc AddSchemeToNews(NewsScheme) returns (NewsScheme){}
}

message CreateNewsLetterRequest{
    string title=1;
    string body=2;
}

message NewsLetter{
    string news_letter_id=1;
    string title=2;
    string body=3;
}

message NewsScheme {
    string news_letter_id=2;
    string scheme_id=1;
}
